Updated DebugFrontend